lab1/Test/L1-A-6-27.cmm
float DUYusrPauA [ 92408703 ] TbCD2sD [ 2001703977 
  ] , bdjOWyJEwVeWa6fV , o3uXUcqJ7P_z_30ad [ 1318894302 
  ] , Qk4AluWBVr7 




;
> float A9Sr3Fgv4H1TG_ ( ) {
  float q_99gEqcCv [ 2145137271 ] [ 1508153347 ] 1314967716 
    ] [ 1409105304 ] = - rfqdmqJmX / iqt * abHAMgGOMhBLDw6Ey 
    * Kc31dC7fcPG_wf - VJsRF4J4NKicFOZb - mC7GZGUjvTgI0bIgcLS 
    < iodiD75P4 >= sk6csb < km7GfiZU9szLnu_ == dQO77rWQxn70igcuAlET 
    < qEh6bV5ls > STiBuD7jooui <= aWToaXB , XDLMxI1Yrm66b8 
    = FB_4n_kP8_JOpgpr , rKll37qDVvj ;
}~
@